# DBnote

./: CONTRIBUTING.md  README.md  next.config.js  package.json  tailwind.config.ts  tsconfig.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_init.sql  002_note_color.sql  003_bases.sql
src-tauri/src/: bases.rs  db.rs  error.rs  folders.rs  lib.rs  link_parser.rs  links.rs  models.rs  notes.rs  slug.rs  state.rs  tags.rs  vault_registry.rs
src-tauri/src/commands/: bases.rs  folders.rs  mod.rs  notes.rs  tags.rs  vaults.rs
src/app/: globals.css  layout.tsx  page.tsx
src/components/: BaseContextMenu.tsx  CreateBaseModal.tsx  GraphView.tsx  NoteContextMenu.tsx  SearchModal.tsx  SettingsModal.tsx
src/lib/: format.ts  graph-utils.ts  tauri-api.ts  types.ts
